[gd_scene load_steps=9 format=3 uid="uid://d273tdrbut8we"]

[ext_resource type="Script" uid="uid://dplpua1f86hsa" path="res://components/Battery3D.gd" id="1_b3t3d"]
[ext_resource type="Script" uid="uid://bhe7bl46uj0jq" path="res://components/TerminalFeedback.gd" id="2_t3rmfb"]
[ext_resource type="Material" uid="uid://cv6f3hveepm7a" path="res://components/Resistor3D.tres" id="3_t3rmmat"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cell_body"]
albedo_color = Color(0.5, 0.5, 0.55, 1)
metallic = 0.5
roughness = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_cell"]
top_radius = 0.08
bottom_radius = 0.08
height = 0.18

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_terminal"]
radius = 0.075
height = 0.976

[sub_resource type="SphereMesh" id="SphereMesh_terminal_vis"]
radius = 0.05

[sub_resource type="BoxShape3D" id="BoxShape3D_component_body"]
size = Vector3(0.247, 0.2, 0.2)

[node name="Battery3D" type="Node3D"]
script = ExtResource("1_b3t3d")

[node name="Cell1" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cell_body")
mesh = SubResource("CylinderMesh_cell")

[node name="Cell2" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cell_body")
mesh = SubResource("CylinderMesh_cell")

[node name="Cell3" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cell_body")
mesh = SubResource("CylinderMesh_cell")

[node name="Cell4" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 1, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cell_body")
mesh = SubResource("CylinderMesh_cell")

[node name="TerminalPositive" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0)
collision_layer = 2
script = ExtResource("2_t3rmfb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalPositive"]
shape = SubResource("CapsuleShape3D_terminal")

[node name="Visualization" type="MeshInstance3D" parent="TerminalPositive"]
material_override = ExtResource("3_t3rmmat")
mesh = SubResource("SphereMesh_terminal_vis")

[node name="Label3D" type="Label3D" parent="TerminalPositive"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Positive"
font_size = 20

[node name="TerminalNegative" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0)
collision_layer = 2
script = ExtResource("2_t3rmfb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerminalNegative"]
shape = SubResource("CapsuleShape3D_terminal")

[node name="Visualization" type="MeshInstance3D" parent="TerminalNegative"]
material_override = ExtResource("3_t3rmmat")
mesh = SubResource("SphereMesh_terminal_vis")

[node name="Label3D" type="Label3D" parent="TerminalNegative"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.6, 0)
visible = false
billboard = 1
text = "Negative"
font_size = 20

[node name="ComponentBody" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComponentBody"]
shape = SubResource("BoxShape3D_component_body")

[node name="CurrentLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0.15, 0)
visible = false
text = "I: N/A @ N/A"
font_size = 20
